# AgenticTrading

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  create_agent_vs_baseline_leaderboard.py  render-discord-bot.yaml  render.yaml  requirements-discord.txt  requirements-vnpy.txt  requirements.txt  vercel.json
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  publish-pypi.yml
agentic-trading/: .env.example  .gitignore  DESIGN_BASELINE_GENERATION.md  Dockerfile  FIX_SUMMARY.md  HOURLY_DATA_RECOMMENDATIONS.md  JAGGED_CURVE_FIX.md  README.md  requirements.txt  vercel.json
agentic-trading/backend/: app.py  baseline_data.py  baseline_generator.py  baselines_endpoint.py  cache.py  database.py  market_data.py  optimization_config.json  paper_baselines.py  paper_trading.py  runtime.txt
agentic-trading/docs/: BACKTEST_QUICKSTART.md  START_HERE.md
agentic-trading/frontend/: app.js  index.html  styles.css
agentic-trading/scripts/: backtest_hourly_agent.py  diagnose_alpaca_data.py
backend/: app.py  baseline_generator.py  baselines.py  llm_validator.py  market_data.py  middleware.py
credentials/: alpaca.json
dashboard/: __init__.py
docs/: README.md  commonstack-integration-demo-report.md  discord-bot-instructions.md  landing-narrative-copy.md
docs/source/: conf.py  (+1 more)
frontend/: app.js  index.html  styles.css
orchestration/: README.md  create_agent_vs_baseline_leaderboard.py  run_real_backtest.py  run_simple_backtest.py
packaging/agentictrading/: README.md  RELEASING.md  pyproject.toml
packaging/agentictrading/src/agentictrading/: __init__.py  atl_client.py  cli.py  client.py  exceptions.py  models.py  runner.py
packaging/agentictrading/tests/: conftest.py  test_atl_client.py  test_atl_runner.py
scripts/: backtest.py  backtest_custom_algo.py  backtest_engine.py  backtest_hourly_agent.py
(+489 files in other folders)
