[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentictrading"
dynamic = ["version"]
description = "Lightweight Python client for the Agentic Trading Lab REST API (LLM-powered trading agents, backtests, paper trading)."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Chunlin Feng", email = "chunlinfeng0920@gmail.com" },
    { name = "SecureFinAI Lab" },
]
keywords = [
    "trading",
    "agents",
    "llm",
    "backtesting",
    "finance",
    "quant",
    "paper-trading",
    "agentic",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.urls]
Homepage = "https://agentic-trading-lab.vercel.app/"
Documentation = "https://finagent-orchestration.readthedocs.io/"
Source = "https://github.com/Allan-Feng/AgenticTrading"
Issues = "https://github.com/Allan-Feng/AgenticTrading/issues"

[project.scripts]
agentictrading = "agentictrading.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "agentictrading.__version__" }

[tool.pytest.ini_options]
pythonpath = ["src"]
